kubernetes/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-blue

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: blue

  template:
    metadata:
      labels:
        app: frontend
        version: blue

    spec:
      containers:
      - name: frontend

        image: 230026708124.dkr.ecr.us-east-2.amazonaws.com/frontend-service:v1

        ports:
        - containerPort: 80
