kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend-container

        image: 230026708124.dkr.ecr.us-east-2.amazonaws.com/claude-website:v2

        ports:
        - containerPort: 80
