kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-070b605e13a319230,subnet-0e0a183b3cb4dbae4,subnet-0d9d6318bfb2f3955

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api/courses
        pathType: Prefix
        backend:
          service:
            name: course-service
            port:
              number: 3000

      - path: /api/students
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 3000
